frontend_tests/negative/unavailable_standard_package/go.mod
module example.com/renvotests/negative/unavailablestd

go 1.25
